--- a/app/views/shared/_article_form.html.erb
+++ b/app/views/shared/_article_form.html.erb
@@ -3,5 +3,7 @@
   <%= f.text_field :title %>
   <%= f.label :body %>
   <%= f.text_field :body %>
+  <%= f.label :tag_list %>
+  <%= f.text_field :tag_list %>
   <%= f.submit %>
 <% end %>
