--- a/app/views/shared/_article.html.erb
+++ b/app/views/shared/_article.html.erb
@@ -1,11 +1,15 @@
 <div class="card">
   <h1><%= article.title %></h1>
+  <%= link_to "edit", edit_article_path(article) %>
+  <%= link_to "delete", 
+      article_path(article), method: :delete,
+                             data: { confirm: "Are you sure?"} %>
   <p><%= article.body %></p>
   <ul>
     <% article.tags.each do |tag| %>
       <li><%= link_to tag.name, tag_path(tag) %></li>
     <% end %>
-  </ul> 
+  </ul>
 
 
   <h4>Comments</h4>
