--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
-<h1> All articles </h1>
+<h1> Welcome to the Blog! </h1>
+
 <%= render partial: 'shared/article', collection: articles,
                                       locals: { comment: comment } %>
